--- a/EconomicAnalysis.ipynb
+++ b/EconomicAnalysis.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMgZ1GdufdsT9aMlBvBqSKq",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/patty149/ECONOMICANALYSIS/blob/main/EconomicAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "N63hTIMXpzRZ"
       },
@@ -37,7 +49,7 @@
       "metadata": {
         "id": "DQPMONUOp9Vm"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -50,7 +62,7 @@
       "metadata": {
         "id": "TC1RTw71n-dQ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,12 +78,12 @@
       "cell_type": "code",
       "source": [
         "from fredapi import Fred\n",
-        "fred_key = 'fba0a4b1121fca45cab153869cc98794'"
+        "fred_key = 'your_key_here'"
       ],
       "metadata": {
         "id": "0NmP7_zHoHIq"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +94,7 @@
       "metadata": {
         "id": "JdIh96vCo1HL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +105,7 @@
       "metadata": {
         "id": "malIry3ro7XL"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +121,7 @@
         "id": "x_-4JRf1o_Xs",
         "outputId": "2d473d33-7283-4e97-d67d-199f537afd80"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +569,7 @@
         "id": "Dmg6C2t_pBmJ",
         "outputId": "c6cb1aa5-7f2e-45ff-dd03-136cc92ffe7d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -590,7 +602,7 @@
       "metadata": {
         "id": "Gt3nvYQ9p5p0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +620,7 @@
       "metadata": {
         "id": "NRg6YQ40qJhV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +635,7 @@
       "metadata": {
         "id": "BrfffmI2qk2W"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +649,7 @@
       "metadata": {
         "id": "1XSk1MfEqnGl"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -653,7 +665,7 @@
         "id": "MdrJnIAiq5A5",
         "outputId": "19dd3de3-a696-42c1-8405-8ffc217d8d78"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -724,7 +736,7 @@
         "id": "lNChAkkKq9VC",
         "outputId": "13199456-28a2-4e5d-82bd-281103aa7a99"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -756,7 +768,7 @@
       "metadata": {
         "id": "KgQh7XTzrGSK"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +789,7 @@
       "metadata": {
         "id": "PGKsnVGGrW_n"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +800,7 @@
       "metadata": {
         "id": "rLUQCBUKraBI"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +832,7 @@
         "id": "azEiR9emrojg",
         "outputId": "137a8d60-4978-42e5-ce38-884c5af7a70e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -858,7 +870,7 @@
         "id": "TJCa5vTtrxwr",
         "outputId": "61f5b3ac-2c1b-4337-9946-fd9619728973"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -916,7 +928,7 @@
         "id": "VoxuGGADskqu",
         "outputId": "1d805e06-37cf-432a-e020-2001921fd8f3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,7 +988,7 @@
         "id": "NmzJy9zk2sw5",
         "outputId": "4440a684-4342-4b67-cfb6-dd6ecc967c0f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
